--- a/templates/all-template.yaml
+++ b/templates/all-template.yaml
@@ -1493,11 +1493,10 @@ spec:
         - github_commit_message
 
   steps:
-    - id: Commit-File
+    - id: CommitFile
       name: Commit File
       action: hurameco:github-commit
       input:
-        - ec2_instance_name: ${{ parameters.ec2_instance }}
-        - github_repository: ${{ parameters.github_repository}}
-        - github_commit_message: ${{ parameters.github_commit_message}}
-
+        ec2_instance_name: ${{ parameters.ec2_instance }}
+        github_repository: ${{ parameters.github_repository}}
+        github_commit_message: ${{ parameters.github_commit_message}}
