--- a/templates/all-template.yaml
+++ b/templates/all-template.yaml
@@ -1497,6 +1497,6 @@ spec:
       name: Commit File
       action: hurameco:github-commit
       input:
-        ec2_instance_name: ${{ parameters.ec2_instance }}
+        ec2_instance: ${{ parameters.ec2_instance }}
         github_repository: ${{ parameters.github_repository}}
         github_commit_message: ${{ parameters.github_commit_message}}
