--- a/templates/all-template.yaml
+++ b/templates/all-template.yaml
@@ -1516,7 +1516,7 @@ spec:
     - title: Select Repository
       required:
         - repository_name
-        - branch
+        - repository_branch
       properties:
         repository_name:
           title: Name of the Repository
