--- a/templates/all-template.yaml
+++ b/templates/all-template.yaml
@@ -2167,7 +2167,7 @@ spec:
   parameters:
     - title: EC2 Instance Creation
       properties:
-        ecs_instance_name:
+        ec2_instance_name:
           title: EC2 Instance Name
           type: string
           description: Name of the EC2 Instance
