--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,11 +3,11 @@ kind: Component
 metadata:
   name: bckstage-templates
   title: Backstage Templates
-  description: Repository with all Backstage Templates 
+  description: Repository with all Backstage Templates
   annotations:
     github.com/project-slug: hurameco/backstage-demo
-    gocd.org/pipelines: 'GitHub Actions Demo'
-    backstage.io/techdocs-ref: dir:. 
+    gocd.org/pipelines: "GitHub Actions Demo"
+    backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-id: dot
     backstage.io/kubernetes-namespace: a-team
     backstage.io/kubernetes-label-selector: app.kubernetes.io/name=crossplane-kubernetes
@@ -28,20 +28,19 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: hurameco
+  owner: user:hurameco
 
---- 
-
+---
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: bckstage-templates-alternative
   title: Backstage Templates Copy
-  description: Copy of Repository with all Backstage Templates 
+  description: Copy of Repository with all Backstage Templates
   annotations:
     github.com/project-slug: hurameco/backstage-demo
-    gocd.org/pipelines: 'GitHub Actions Demo'
-    backstage.io/techdocs-ref: dir:. 
+    gocd.org/pipelines: "GitHub Actions Demo"
+    backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-id: dot
     backstage.io/kubernetes-namespace: a-team
     backstage.io/kubernetes-label-selector: app.kubernetes.io/name=crossplane-kubernetes
@@ -62,4 +61,4 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: hurameco
+  owner: user:hurameco
