Change: Catalog Info for Teams

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -28,7 +28,7 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: user:hurameco
+  owner: team-a
 
 ---
 apiVersion: backstage.io/v1alpha1
@@ -61,4 +61,4 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: user:hurameco
+  owner: hurameco
